<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.jansmi.scheduler.activities.ProfileActivity">

    <item
        android:id="@+id/action_invitations"
        android:orderInCategory="1"
        android:title="@string/action_invitations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_measures"
        android:orderInCategory="2"
        android:title="@string/action_measures"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_targets"
        android:orderInCategory="3"
        android:title="@string/action_targets"
        app:showAsAction="never" />

</menu>